# spiiran_drone

./: README.md
models/Lep/: model.config  model.sdf
models/Lep/meshes/: spheri.dae
models/marker1/: model.sdf
models/platform/: model.sdf  platform.sdf
models/platform version/platform _v1/: model.config  platform.sdf
models/platform/meshes/: platform_roof_v1.stl
models/spiiran_drone/: model.config  model.sdf
models/tarot_t960/: model.config  tarot_t960.sdf
models/tarot_t960/meshes/: propeler_1755_ccw.stl  propeler_1755_cw.stl  propeler_17kh55.stl  propeler_17kh55_2.stl
models/test_world/: test.world
pexif/: pexif.py
ros/core_api/cmake/: core_api-msg-extras.cmake  core_apiConfig.cmake
ros/core_api/launch/: core_api_rostful.launch
ros/core_api/param_files/: flyt_params.md5sum  flyt_params.yaml
ros/core_api/scripts/: check_md5_paramfile.sh  flytsim.cfg  gpio_init.sh  launch_flytOS.sh  launch_flytSim.sh  lic_data.txt  start_flytOS.sh  stop_flytOS.sh  stop_flytSim.sh
ros/flytcore/: .rosinstall  flyt_python.record  pyros.record  rostful.record  setup.sh
ros/flytcore/share/jevois/: package.xml
ros/flytcore/share/jevois/cmake/: jevois-msg-extras.cmake  jevois-msg-paths.cmake  jevoisConfig.cmake
ros/flytcore/share/jevois/launch/: jevois.launch
ros/flytcore/share/jevois/msg/: ArTag.msg  ArTagList.msg
ros/flytcore/share/jevois/srv/: WriteData.srv
ros/flytcore/share/libmavconn/: package.xml
ros/flytcore/share/libmavconn/cmake/: libmavconnConfig.cmake
ros/flytcore/share/libmavconn/cmake/Modules/: MavrosMavlink.cmake
ros/flytcore/share/object_follower/: package.xml
ros/flytcore/share/object_follower/cmake/: object_followerConfig.cmake
ros/flytcore/share/object_follower/launch/: object_follower.launch
ros/ros_drone_task/: CMakeLists.txt  package.xml
ros/ros_drone_task/src/: attitude_check.cpp  battery_check.cpp  emergency_battery.cpp  flight_2_change_point_.cpp  flight_2_point.cpp  global_position.cpp  takeoff_and_land.cpp
scripts/install/: demoapp1.py
scripts/install/flight_and_photo/: takeoff_land_photo.py
scripts/install/flight_to_point_and_photo/: takeoff_to_point_land_photo.py
scripts/install/land_photo/: .set_gps.swp  .set_gpsg_.swp  set_gps_v1.py
scripts/install/landphoto/: set_gps.py
scripts/install/real_test/: .test1.py.swp  test0.py  (+7 more)
stl/Platforma/: model_sborki_platformy_platforma.stl
(+1434 files in other folders)
