<?xml version="1.0"?>
<package>
  <name>jevois</name>
  <version>1.0.0</version>
  <description>
    Jevois is a computer vision camera module, providing serial output.
  </description>

  <maintainer email="srv@flytbase.com">Sharvashish Das</maintainer>

  <license>MIT</license>

  <url type="website">https://flytbase.com</url>
  <author email="srv@flytbase.com">Sharvashish Das</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>flyt_lib</build_depend>
  <run_depend>flyt_lib</run_depend>

  <test_depend>boost</test_depend>

</package>
