<?xml version="1.0"?>
<package format="2">
  <name>libmavconn</name>
  <version>0.18.3</version>
  <description>
    MAVLink communication library.
    This library provide unified connection handling classes
    and URL to connection object mapper.

    This library can be used in standalone programs.
  </description>

  <maintainer email="sharvashish@navstik.org">Sharvashish Das</maintainer>
  <author email="sharvashish@navstik.org">Sharvashish Das</author>
  <license>GPLv3</license>
  <license>LGPLv3</license>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/mavros</url>
  <url type="repository">https://github.com/mavlink/mavros.git</url>
  <url type="bugtracker">https://github.com/mavlink/mavros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>libconsole-bridge-dev</depend>

  <test_depend>gtest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
